--- a/letterfonts.tex
+++ b/letterfonts.tex
@@ -240,3 +240,8 @@
 \newcommand{\Om}{\Omega}
 \newcommand{\sg}{\sigma}
 \newcommand{\Sg}{\Sigma}
+
+%---------------------------------------
+% Symbols:-
+%---------------------------------------
+\newcommand{\ind}{\perp\!\!\!\perp}
